[gd_scene load_steps=9 format=3 uid="uid://ck01tcojpwpkn"]

[ext_resource type="PackedScene" uid="uid://y3qrsonetllu" path="res://player.tscn" id="1_1pcbf"]
[ext_resource type="Script" path="res://survivors_game.gd" id="1_erucr"]
[ext_resource type="PackedScene" uid="uid://1ejee8ywnm5o" path="res://pine_tree.tscn" id="2_jyx4o"]

[sub_resource type="Curve2D" id="Curve2D_jk5hp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -65, -70, 0, 0, 0, 0, 2007, -64, 0, 0, 0, 0, 2025, 1148, 0, 0, 0, 0, -55, 1136, 0, 0, 0, 0, -65, -70)
}
point_count = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lskhd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_naq6d"]
bg_color = Color(0, 0.478431, 0.764706, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000
expand_margin_left = 12.0
expand_margin_top = 2.0
expand_margin_right = 12.0
expand_margin_bottom = 2.0
shadow_color = Color(0.184314, 0.184314, 0.184314, 0.305882)
shadow_size = 3
shadow_offset = Vector2(1, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_joec5"]
bg_color = Color(0.0627451, 0.509804, 0.937255, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000
expand_margin_left = 12.0
expand_margin_top = 2.0
expand_margin_right = 12.0
expand_margin_bottom = 2.0
shadow_color = Color(0.184314, 0.184314, 0.184314, 0.305882)
shadow_size = 3
shadow_offset = Vector2(1, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lowun"]
bg_color = Color(0.0627451, 0.698039, 0.937255, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000
expand_margin_left = 12.0
expand_margin_top = 2.0
expand_margin_right = 12.0
expand_margin_bottom = 2.0
shadow_color = Color(0.184314, 0.184314, 0.184314, 0.305882)
shadow_size = 3
shadow_offset = Vector2(1, 3)

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_erucr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1951.0
offset_bottom = 1116.0

[node name="Player" parent="." instance=ExtResource("1_1pcbf")]
position = Vector2(973, 534)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-1092.35, -634.885)
scale = Vector2(1.1177, 1.21593)
curve = SubResource("Curve2D_jk5hp")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-65, -70)
rotation = 0.00289574

[node name="PineTree" parent="." instance=ExtResource("2_jyx4o")]
position = Vector2(698, 321)

[node name="TimerSpawnMob" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerSpawnTree" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -41.0
offset_right = 131.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -574.0
offset_top = -130.0
offset_right = 566.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.127156
theme_override_colors/font_color = Color(0.870588, 0.313726, 0.168627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 14
theme_override_constants/shadow_offset_y = 22
theme_override_constants/outline_size = 40
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 210
text = "Game Over"

[node name="NewGame" type="Button" parent="GameOver/ColorRect"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = 208.0
offset_right = 81.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0.890196, 0.890196, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_lskhd")
theme_override_styles/hover = SubResource("StyleBoxFlat_naq6d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_joec5")
theme_override_styles/normal = SubResource("StyleBoxFlat_lowun")
action_mode = 0
text = "New Game"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="TimerSpawnMob" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerSpawnTree" to="." method="_on_timer_spawn_tree_timeout"]
[connection signal="pressed" from="GameOver/ColorRect/NewGame" to="." method="_on_new_game_pressed"]
